Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45758

qdoc can't parse enum value with internal comma

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 RC
    • 5.5.0 Alpha
    • Build tools: qdoc
    • None
    • 74f28ef1ca3be73dba4e8157729bab4cae40385d

    Description

      qdoc's parser can't parse an enum value that contains a comma. See \enum QSysInfo::MacVersion, where several values contain a comma:

      MV_IOS_4_3 = Q_MV_IOS(4, 3),
      MV_IOS_5_0 = Q_MV_IOS(5, 0),
      MV_IOS_5_1 = Q_MV_IOS(5, 1),
      MV_IOS_6_0 = Q_MV_IOS(6, 0),
      MV_IOS_6_1 = Q_MV_IOS(6, 1),
      MV_IOS_7_0 = Q_MV_IOS(7, 0),
      MV_IOS_7_1 = Q_MV_IOS(7, 1),
      MV_IOS_8_0 = Q_MV_IOS(8, 0)

      qdoc gets lost and reports there is no documentation for those values, when, in fact, the documentation is there.

      Attachments

        For Gerrit Dashboard: QTBUG-45758
        # Subject Branch Project Status CR V

        Activity

          People

            gbk Martin Smith (Qt)
            gbk Martin Smith (Qt)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes